manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-music
spec:
  selector:
    app: spring-music
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
