manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-music
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: spring-music.host.me
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: spring-music
            port:
              number: 80
